Submission page added.

--- a/partials/post.html
+++ b/partials/post.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class="delete">
-        <a href="blog/delete/#">
+        <a href="#/deletePost/{{ post.id }}">
             <img src="img/delete.png" width="30" height="30"/>
         </a>
     </div>
