--- a/css/form.css
+++ b/css/form.css
@@ -1,20 +1,32 @@
 #formContainer
 {
-    position:fixed;
-    left: 40%;
-    top: 0;
-    float: right;
-    width: 50%;
+    margin: 50px 50px 50px 50px;
+    padding: 30px 40px 40px;
+    float: center;
     background: #E7E7E7;
     border: 1px solid darkgrey;
 }
 #form
 {
-    display:none;
     padding: 60px 40px 40px;
 }
 
 #text
 {
     resize: none;
+}
+
+#creation_date
+{
+    float: right;
+    font-style: italic;
+}
+
+#success_message
+{
+    margin: 50px 50px 50px 50px;
+    padding: 30px 40px 40px;
+    float: center;
+    background: #E7E7E7;
+    border: 1px solid darkgrey;
 }
