--- a/partials/post_list.html
+++ b/partials/post_list.html
@@ -1,17 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
- <div class="container">
-     <div class="navbar-header">
-         <div class="navbar-brand">Welcome</div>
-     </div>
-     <div id="navbar" class="navbar-collapse collapse">
-         <ul class="nav navbar-nav">
-             <li class="active new_post" style="margin-left: 40px"><a href="#newPost">New post</a></li>
-             <li><a href="#about">About</a></li>
-         </ul>
-     </div>
- </div>
-</nav>
-
+<div ng-include src="'partials/navbar.html'"></div>
 <div class="container-fluid">
     <div class="row" id="blogHeader">
         <div class="col-sm-2"></div>
