--- a/partials/post_list.html
+++ b/partials/post_list.html
@@ -1,4 +1,4 @@
-<div ng-include src="'partials/navbar.html'"></div>
+<div ng-include="'partials/navbar.html'"></div>
 <div class="container-fluid">
     <div class="row" id="blogHeader">
         <div class="col-sm-2"></div>
