--- a/partials/comment.html
+++ b/partials/comment.html
@@ -1,12 +1,12 @@
 <div class="well comment_element">
 
-    <div class="blogText">
+    <div class="commentText">
         <p>
             {{ comment.text }}
         </p>
     </div>
 
-    <div class="blogFooter">
+    <div class="commentFooter">
         {{ comment.author }}
         {{ comment.created_at }}
     </div>
