--- a/partials/post_list.html
+++ b/partials/post_list.html
@@ -11,7 +11,8 @@
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8" id="blogBody">
-            <div ng-repeat="post in posts" ng-include="'partials/post.html'">
+            <div ng-repeat="post in posts"> 
+                <div ng-include="'partials/post.html'"/>
             </div>
         </div>
         <div class="col-sm-2"></div>
