--- a/partials/post.html
+++ b/partials/post.html
@@ -34,7 +34,7 @@
                     
             <fieldset class="form-group">
                 <label for="text">Text</label>
-                <textarea ng-model="text" name="text" class="form-control" id="text" rows="5" placeholder="Your comment goes here" required></textarea>
+                <textarea type="text" ng-model="text" name="text" class="form-control" id="text" rows="5" placeholder="Your comment goes here" required></textarea>
                 <span style = "color:red" ng-show = "comment_form.text.$dirty && 
                 comment_form.text.$invalid">
                 <span ng-show = "comment_form.text.$error.required">Text is required.</span>
@@ -42,10 +42,10 @@
 
             <fieldset class="form-group">
                 <label for="author">Author</label>
-                <input ng-model="author" name="author" type="text" class="form-control" id="author" maxlength="40" placeholder="Enter your name">
+                <input type="text" ng-model="author" name="author" class="form-control" id="author" maxlength="40" placeholder="Enter your name"required>
             </fieldset>
 
-            <button ng-disabled="comment_form.$invalid" ng-click="submit()" 
+            <button ng-disabled="comment_form.$invalid" ng-click="submit_comment()" 
             type="submit" id="submit_btn" class="btn btn-primary">Comment</button>
 
         </form>
